# apps-data

./: .gitignore  app_ids.csv  example.ipynb  habit-tracker-thefor.json  main.py  preprocessed_reviews.csv  pyproject.toml  reviews_sentiment.csv
app_ids/: app_store.csv  play_store.csv
fetchers/: app_store.py  play_store.py
organized_data/play_store/Dreamfora:AIGoalSetting/: 1_star_reviews.csv  2_star_reviews.csv  3_star_reviews.csv  4_star_reviews.csv  5_star_reviews.csv  sentiment_summary.txt
organized_data/play_store/Engross:FocusTimer&To-Do/: 1_star_reviews.csv  2_star_reviews.csv  3_star_reviews.csv  4_star_reviews.csv  5_star_reviews.csv  sentiment_summary.txt
organized_data/play_store/FabulousDailyRoutinePlanner/: 1_star_reviews.csv  2_star_reviews.csv  3_star_reviews.csv  4_star_reviews.csv  sentiment_summary.txt
organized_data/play_store/Forest:FocusforProductivity/: 1_star_reviews.csv  2_star_reviews.csv  3_star_reviews.csv  4_star_reviews.csv  5_star_reviews.csv  sentiment_summary.txt
organized_data/play_store/Gratitude:Self-CareJournal/: 1_star_reviews.csv  2_star_reviews.csv  3_star_reviews.csv  4_star_reviews.csv  5_star_reviews.csv  sentiment_summary.txt
organized_data/play_store/HabitNowDailyRoutinePlanner/: 1_star_reviews.csv  2_star_reviews.csv  3_star_reviews.csv  4_star_reviews.csv  5_star_reviews.csv  sentiment_summary.txt
organized_data/play_store/HabitShare-HabitTracker/: 1_star_reviews.csv  2_star_reviews.csv  3_star_reviews.csv  4_star_reviews.csv  5_star_reviews.csv  (+1 more)
utils/: common_utils.py  organize_data.py  preprocess.py
(+78 files in other folders)
