[tool.poetry]
name = "apps-data"
version = "0.1.0"
description = ""
authors = ["Nagalakshmi136 <naga708523@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
google-play-scraper = "^1.2.7"
transformers = "^4.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
